# SearchEngine-1

./: CMakeLists.txt  README.md  main.cpp
config/: config.json  requests.json
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
tests/: CMakeLists.txt  TestsCaseSearchServer.cpp  TestsInvertedIndexFunctionality.cpp  test1.cpp
